# fix-casting

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
cast_tab/: __init__.py  adblocking.py  audio.py  browser.py  calibration.py  caster.py  cli.py  devices.py  stats.py  streamer.py  tui.py
notes/claude/: av-sync-investigation.md
notes/grok/: hls-av-desync-ffmpeg-root-cause.md
tools/: calibration_harness.py  cdp_clock.html  clapboard.html  clapboard_av_page.html  clapboard_video.html  continuous_tone_page.html  measure_source_skew.py  probe_input_skew.py  serve_synced_hls.py  test_cdp_delay.py  test_pipeline_skew.py
