[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fix-casting"
version = "0.1.0"
description = "Cast a browser tab to Chromecast (tab mirroring, not dominant video)"
requires-python = ">=3.10"
dependencies = [
    "pychromecast>=14.0.0",
    "playwright>=1.40.0",
    "zeroconf>=0.131.0",
]

[project.scripts]
cast = "cast_tab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cast_tab*"]